# quake-arena-log

./: .coverage  .coveragerc  .gitignore  .mutmut-cache  README.md  coverage.xml  local_file_reader.py  log-reader.py  log_reader.py  parse_data.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
helper/: parser_info.py
tests/medium/: local_file_reader_test.py  log_reader_test.py  parse_data_test.py
tests/small/: parse_info_test.py
